--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'testEthers' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-randombytes', :path => '../node_modules/react-native-randombytes'
+
   target 'testEthersTests' do
     inherit! :complete
     # Pods for testing
