--- a/package.json
+++ b/package.json
@@ -6,15 +6,51 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "start:clean": "react-native start --reset-cache",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@ethersproject/shims": "^5.3.0",
-    "ethers": "^5.3.0",
-    "react": "17.0.1",
+    "@ethersproject/shims": "^5.2.0",
+    "@teamnumio/numio-zksync-api": "file:.yalc/@teamnumio/numio-zksync-api",
+    "@teamnumio/react-native-zksync": "0.0.3",
+    "@teamnumio/zksync": "0.0.28",
+    "@tradle/react-native-http": "^2.0.1",
+    "assert": "^1.5.0",
+    "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
+    "browserify-zlib": "^0.1.4",
+    "console-browserify": "^1.2.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.2.0",
+    "eccrypto": "^1.1.6",
+    "eslint-plugin-prettier": "^3.4.0",
+    "ethers": "^5.3.1",
+    "events": "^1.1.1",
+    "https-browserify": "^0.0.1",
+    "node-libs-browser": "^2.2.1",
+    "path-browserify": "^0.0.0",
+    "process": "^0.11.10",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
+    "react": "^17.0.1",
     "react-native": "0.64.2",
+    "react-native-crypto": "^2.2.0",
     "react-native-get-random-values": "^1.7.0",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-os": "^1.2.6",
+    "react-native-randombytes": "^3.6.1",
+    "react-native-tcp": "^3.3.2",
+    "react-native-udp": "^2.7.0",
+    "readable-stream": "^1.0.33",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.4.2",
+    "tty-browserify": "^0.0.0",
+    "url": "^0.10.3",
+    "util": "^0.10.4",
+    "vm-browserify": "^0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -24,9 +60,62 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "rn-nodeify": "github:tradle/rn-nodeify"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
